Time: 21 ms (72.27%), Space: 63.8 MB (61.46%) - LeetHub